--- a/src/styles/3-layout/_main.scss
+++ b/src/styles/3-layout/_main.scss
@@ -4,10 +4,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 canvas {
   border: 2px solid black;
-  width: 400px;
-  height: 300px;
 }
